# resume-matcher-web

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.run/: Standard Run.run.xml
app/: __init__.py  config.py  keyword_extractor.py  main.py  rss_fetcher.py  storage.py
config/: rss_feeds.json
static/: app.js  index.html  styles.css
